<resources>
    <string name="app_name">فیلیمو</string>
    <string name="featured_video">ویدیوهای ویژه</string>
    <string name="all_videos">همه ویدیوها</string>
    <string name="latest_videos">آخرین ویدیوها</string>
    <string name="home">خانه</string>
    <string name="category">دسته بندی</string>
    <string name="settings">تنظیمات</string>
    <string name="Showcase">ویترین</string>
    <string name="myFilms">فیلم های من</string>
    <string name="filimo">فیلیمو</string>
    <string name="see_all">مشاهده همه</string>
    <string name="search">جستجو</string>
    <string name="no_internet_connection">بدون اتصال اینترنت</string>
    <string name="related">پیشنهادهای مشابه</string>
    <string name="comment">نظرات</string>
    <string name="login_or_register">ورود یا ثبت نام</string>
    <string name="play">پخش</string>
    <string name="about_video">درمورد فیلم</string>
    <string name="imdb">IMDB</string>
    <string name="point">5.6</string>
    <string name="no_comment">نظری وجود ندارد</string>
    <string name="userName">نام کاربر: </string>
    <string name="type_comment">نظرتون رو بنویسید</string>
    <string name="name">نام</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="phone">شماره تلفن</string>
    <string name="register">ثبت نام</string>
    <string name="login">ورود</string>
    <string name="profile">حساب کاربری</string>
    <string name="edite">ویرایش حساب کاربری</string>
    <string name="exit_profile">خروج از حساب</string>
    <string name="rate_it">به این فیلم امتیاز دهید</string>
    <string name="forget_password">فراموش رمز عبور</string>
    <string name="send_request">بازیابی رمز عبور</string>
    <string name="empty_bookmark">لیست نشان شده ها خالی می باشد</string>
    <string name="empty_viewed">لیست مشاهده شده ها خالی می باشد</string>
    <string name="download_completed">اتمام دانلود</string>
    <string name="empty_offline">گالری آفلاین خالی می باشد</string>
    <string name="check_login">برای استفاده از گالری آفلاین\nابتدا وارد شوید یا ثبت نام کنید</string>
    <string name="bookmark">نشان شده ها</string>
    <string name="viewed">مشاهده شده ها</string>
    <string name="offline_gallery">گالری آفلاین</string>
    <string name="not_be_empty">این فیلد نباید خالی باشد</string>
    <string name="not_found_email">چنین ایمیلی یافت نشد</string>
    <string name="send_request_to_email">درخواست شما به ایمیلتان ارسال شد</string>
    <string name="you_login">شما وارد حساب خود شدید</string>
    <string name="name_or_email_wrong">نام یا ایمیل شما اشتباه میباشد</string>
    <string name="exit_account">شما از حساب خارج شدید</string>
    <string name="update_profile">اطلاعات حساب کاربری شما بروز شد</string>
    <string name="you_register">ثبت نام شما با موفقیت انجام شد</string>
    <string name="type_comment_to_send">نظری بنویسید سپس ارسال کنید</string>
    <string name="send_comment_ok">نظر شما ارسال شد</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="message_dialog_main_activity">برای وارد شدن به حساب کاربری ابتدا وارد شوید یا ثبت نام کنید</string>
    <string name="message_send_comment">برای ارسال نظر ابتدا وارد شوید یا ثبت نام کنید</string>
    <string name="message_play_or_register">برای دیدن فیلم ابتدا وارد شوید یا ثبت نام کنید</string>
</resources>