<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nero_7"
    tools:context=".fragments.videoPlayerFragment.VideoPlayerFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_pic_info"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_banner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#74000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.omid.filimo.ui.customView.customFonts.IranSansButton
                    android:id="@+id/btn_play_or_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_16dp"
                    android:background="@drawable/bac_btn_play_or_register"
                    android:padding="@dimen/_10dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_4dp"
                android:src="@drawable/arrow_forward"
                android:tint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.omid.filimo.ui.customView.customFonts.IranSansTextView
                android:id="@+id/video_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/cv_pic"
                app:layout_constraintTop_toTopOf="@id/cv_pic" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_pic"
                android:layout_width="@dimen/_150dp"
                android:layout_height="@dimen/_200dp"
                android:layout_marginTop="@dimen/_30dp"
                android:layout_marginEnd="@dimen/_8dp"
                app:cardCornerRadius="@dimen/_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_back"
                app:layout_constraintVertical_bias="0.100000000">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_video"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rate_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_100dp"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/sunGlow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_pic_info" />

            <com.omid.filimo.ui.customView.customFonts.IranSansTextView
                android:id="@+id/about_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_8dp"
                android:text="@string/about_video"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_pic" />

            <com.omid.filimo.ui.customView.customFonts.IranSansTextView
                android:id="@+id/text_about"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about_video" />

            <View
                android:id="@+id/view_1"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_0.5dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_about" />

            <com.omid.filimo.ui.customView.customFonts.IranSansTextView
                android:id="@+id/related"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_8dp"
                android:text="@string/related"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_single_video"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_250dp"
                android:layout_marginTop="@dimen/_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/related" />

            <View
                android:id="@+id/view_2"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_0.5dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_single_video" />

            <com.omid.filimo.ui.customView.customFonts.IranSansTextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_8dp"
                android:text="@string/comment"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_comment_list"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_250dp"
                android:layout_marginTop="@dimen/_8dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comment" />

            <com.omid.filimo.ui.customView.customFonts.IranSansTextView
                android:id="@+id/txt_no_comment"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_65dp"
                android:layout_marginTop="@dimen/_8dp"
                android:gravity="center"
                android:text="@string/no_comment"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comment" />

            <View
                android:id="@+id/view_3"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_0.5dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_comment_list" />

           <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/type_comment"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_65dp"
                android:hint="@string/type_comment"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_8dp"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/send_it"
                app:layout_constraintEnd_toStartOf="@+id/img_user"
                app:layout_constraintTop_toBottomOf="@id/view_3" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_user"
                android:layout_width="@dimen/_65dp"
                android:layout_height="@dimen/_65dp"
                android:layout_marginTop="@dimen/_8dp"
                android:padding="@dimen/_20dp"
                android:src="@drawable/person"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_3" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/send_it"
                android:layout_width="@dimen/_65dp"
                android:layout_height="@dimen/_65dp"
                android:padding="@dimen/_15dp"
                android:layout_marginTop="@dimen/_8dp"
                android:src="@drawable/arrow_back"
                android:tint="@color/sunGlow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/live_no_connection"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/live_pic_no_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_connection"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.omid.filimo.ui.customView.customFonts.IranSansTextView
            android:id="@+id/live_txt_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:text="@string/no_internet_connection"
            android:textColor="@color/BlueWhale"
            android:textSize="@dimen/_17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/live_pic_no_connection" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>